--- a/dynamic-id_2019-2020/example-pattern/index.html
+++ b/dynamic-id_2019-2020/example-pattern/index.html
@@ -2,7 +2,7 @@
 	<!-- <title></title> -->
 	<script src="./js/p5/p5.min.js"></script>
 	<script src="./js/p5/p5.dom.min.js"></script>
-	<script src="./js/p5/p5.custom.js"></script>
+	<script src="https://ecal-mid.github.io/js/p5.custom.js"></script>
 	<script src="./js/p5/p5.sound.min.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="./css/main.css">
