--- a/2019-2020/sem2/soraya-camina/index.html
+++ b/2019-2020/sem2/soraya-camina/index.html
@@ -3,7 +3,7 @@
 	<script src="./js/p5/p5.min.js"></script>
 	<script src="./js/p5/p5.dom.min.js"></script>
 	<script src="./js/p5/p5.pattern.js"></script>
-	<!-- <script src="https://ecal-mid.github.io/js/p5.custom.js"></script> -->
+	<script src="https://ecal-mid.github.io/js/p5.custom.js"></script>
 	<script src="./js/p5/p5.sound.min.js"></script>
 
 	<script src="./js/datgui/dat.gui.min.js"></script>
