try fixing offset

--- a/2019-2020/sem2/soraya-camina/index.html
+++ b/2019-2020/sem2/soraya-camina/index.html
@@ -2,7 +2,7 @@
 	<!-- <title></title> -->
 	<script src="./js/p5/p5.min.js"></script>
 	<script src="./js/p5/p5.dom.min.js"></script>
-	<script src="./js/p5/p5.pattern.js"></script>
+	<script src="./js/p5/p5.pattern2.js"></script>
 	<script src="./js/p5/p5.sound.min.js"></script>
 	<script src="./js/datgui/dat.gui.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="./css/main.css">
