--- a/2019-2020/sem2/soraya-camina/index.html
+++ b/2019-2020/sem2/soraya-camina/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html><html><head>
 	<!-- <title></title> -->
-	<script src="./js/p5/p5.min.js"></script>
-	<script src="./js/p5/p5.dom.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
+	
+	<!-- <script src="./js/p5/p5.dom.min.js"></script> -->
 	<script src="./js/p5/p5.pattern2.js"></script>
-	<script src="./js/p5/p5.sound.min.js"></script>
+	<!-- <script src="./js/p5/p5.sound.min.js"></script> -->
 	<script src="./js/datgui/dat.gui.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="./css/main.css">
 	<link rel="stylesheet" type="text/css" href="./css/dat.gui.custom.css">
